--- a/src/scss/big-mobile/ninth_box.scss
+++ b/src/scss/big-mobile/ninth_box.scss
@@ -1,37 +1,45 @@
 .ninth-panel {
   .row {
     padding-left: 15px;
-
-    .text-color-light-gray {
-      font-size: 1.5em;
-
-      span {
-        font-size: 0.9em;
-      }
-    }
   }
 
   .card {
-    margin-bottom: 15px;
+    margin-bottom: 25px;
 
     .card-body {
       width: 100%;
-      height: 175px;
       color: white;
+      height: 195px;
+
+      .bd-highlight {
+        p {
+          font-size: 13px;
+        }
+      }
 
       .card-text {
-        font-size: 1rem;
+        font-size: 20px;
 
         span {
-          font-size: 1rem;
+          font-size: 20px;
         }
       }
     }
   }
 
-  .btn-gradient-border {
-    //background: transparent;
+  .box-title {
+    .text-1 {
+      font-size: 30px;
+      font-weight: 800;
+    }
   }
+
+  .box-video {
+    .col-sm {
+      padding: 0;
+    }
+  }
+
 
   .news-1 {
     background: url("../images/news-1.png") no-repeat;
