--- a/src/scss/tablets/ninth_box.scss
+++ b/src/scss/tablets/ninth_box.scss
@@ -24,8 +24,11 @@
     }
   }
 
-  .btn-gradient-border {
-    //background: transparent;
+  .box-title {
+    .text-1 {
+      font-size: 50px;
+      font-weight: 800;
+    }
   }
 
   .news-1 {
