--- a/src/scss/desctop/main-desctop.scss
+++ b/src/scss/desctop/main-desctop.scss
@@ -55,16 +55,16 @@
         padding: 26px;
         position: absolute;
 
-        @media (min-width: $desctop-start) and (max-width: 1199.98px) {
+        @media (min-width: $desctop-start) and (max-width: 1249.98px) {
           .king-size {
             display: none;
           }
         }
 
-        @media (min-width: 1200px) {
+        @media (min-width: 1250px) {
           .king-size {
-            font-size: 105.54px;
-            line-height: 11rem;
+            font-size: 100px;
+            line-height: 9rem;
             font-weight: 900;
 
             .who {
@@ -112,8 +112,14 @@
       right: -325px;
     }
 
-    @media (min-width: 1100px) and (max-width: 1319.98px) {
+    @media (min-width: 1100px) and (max-width: 1249.98px) {
       max-width: 430px;
+      top: 13%;
+      right: -300px;
+    }
+
+    @media (min-width: 1250px) and (max-width: 1319.98px) {
+      max-width: 400px;
       top: 13%;
       right: -200px;
     }
@@ -139,10 +145,10 @@
   }
 
   .footer-contacts {
-    font-size: 32px;
+    font-size: 26px;
 
     span {
-      font-size: 32px;
+      font-size: 26px;
     }
   }
 
