--- a/src/scss/desctop/six_box.scss
+++ b/src/scss/desctop/six_box.scss
@@ -1,3 +1,5 @@
+@import "../variables";
+
 .sixth-panel {
   .text-title {
     font-weight: 800;
@@ -16,7 +18,13 @@
     margin-bottom: 20px;
 
     .image-box {
-      margin-left: -138%;
+      @media (min-width: $desctop-start) and (max-width: 1199.98px) {
+        margin-left: -138%;
+      }
+
+      @media (min-width: 1200px) {
+        margin-left: -100%;
+      }
     }
   }
 
