--- a/src/scss/tablets/six_box.scss
+++ b/src/scss/tablets/six_box.scss
@@ -15,18 +15,14 @@
   .list-style-plus {
     li {
       div {
-        margin-top: -14px;
-
-        p, span {
-          font-size: 1rem;
-        }
+        margin-top: -28px;
 
         h5 {
-          letter-spacing: 1px;
+          font-size: 20px;
         }
       }
       &:before {
-        text-indent: -30px;
+        text-indent: -40px;
       }
     }
   }
@@ -35,7 +31,7 @@
     padding-right: 15px;
 
     .btn-gradient-border {
-      height: 40px;
+      height: 50px;
       padding-top: 7px;
 
       .attach-file {
