--- a/src/scss/tablets/third_box.scss
+++ b/src/scss/tablets/third_box.scss
@@ -1,11 +1,8 @@
 .third-panel {
   .left-side-box {
     .text-1 {
-      font-size: 7em;
-    }
-
-    p {
-      font-size: 1.3em;
+      font-size: 60px;
+      font-weight: 800;
     }
 
     .box-3-image {
@@ -14,15 +11,8 @@
     }
   }
 
-  .right-side-box {
-    p,
-    strong {
-      font-size: 1.3em;
-    }
-  }
-
   .text-3 {
-    font-size: 4em;
-    margin-top: 13px;
+    font-size: 45px;
+    margin-top: 8px;
   }
 }
