--- a/src/scss/extra-small-mobile/ninth_box.scss
+++ b/src/scss/extra-small-mobile/ninth_box.scss
@@ -3,10 +3,7 @@
     padding-left: 15px;
   }
 
-  .card {
-    margin-bottom: 25px;
-
-    .card-body {
+  .card-body {
       width: 100%;
       color: white;
 
@@ -32,7 +29,6 @@
         }
       }
     }
-  }
 
   .box-title {
     .text-1 {
@@ -42,19 +38,13 @@
   }
 
   .box-video {
-    .col-sm {
+    >div {
       padding: 0;
+      margin: 30px;
     }
-  }
 
-
-  .news-1 {
-    background: url("../images/news-1.png") no-repeat;
-    background-size: 100%;
-  }
-
-  .news-2 {
-    background: url("../images/news-2.png") no-repeat;
-    background-size: 100%;
+    .empty-box-video {
+      display: none;
+    }
   }
 }
