--- a/src/scss/desctop-1920/ninth_box.scss
+++ b/src/scss/desctop-1920/ninth_box.scss
@@ -11,20 +11,16 @@
     }
   }
 
-  .card {
-    margin-bottom: 15px;
+  .card-body {
+    width: 100%;
+    height: 515px;
+    color: white;
 
-    .card-body {
-      width: 100%;
-      height: 515px;
-      color: white;
+    .card-text {
+      font-size: 1.7rem;
 
-      .card-text {
+      span {
         font-size: 1.7rem;
-
-        span {
-          font-size: 1.7rem;
-        }
       }
     }
   }
@@ -32,20 +28,11 @@
   .box-video {
     >div {
       padding: 0;
+      margin: 30px 0 ;
 
       &:first-child {
         margin-right: 30px;
       }
     }
-  }
-
-  .news-1 {
-    background: url("../images/news-1.png") no-repeat;
-    background-size: 100%;
-  }
-
-  .news-2 {
-    background: url("../images/news-2.png") no-repeat;
-    background-size: 100%;
   }
 }
