--- a/src/scss/tablets/ninth_box.scss
+++ b/src/scss/tablets/ninth_box.scss
@@ -6,10 +6,8 @@
       font-size: 1.4em;
     }
   }
-  .card {
-    margin-bottom: 15px;
 
-    .card-body {
+  .card-body {
       width: 100%;
       height: 240px;
       color: white;
@@ -22,22 +20,15 @@
         }
       }
     }
-  }
 
-  .box-title {
-    .text-1 {
-      font-size: 50px;
-      font-weight: 800;
+  .box-video {
+    >div {
+      padding: 0;
+      margin: 30px 0 ;
+
+      &:first-child {
+        margin-right: 30px;
+      }
     }
-  }
-
-  .news-1 {
-    background: url("../images/news-1.png") no-repeat;
-    background-size: 100%;
-  }
-
-  .news-2 {
-    background: url("../images/news-2.png") no-repeat;
-    background-size: 100%;
   }
 }
